# GovPolicy-Assistant

./: .dockerignore  .gitignore  API_KEYS.txt  Dockerfile  README.md  config.yaml  pyproject.toml
src/: main.py
src/backend/: main.py
src/config/: config_loader.py  logger.py  logging_config.py
src/data/: loaders.py
src/embeddings/: create_embeddings.py
src/frontend/: main.py
src/pipeline/: rag_pipeline.py
src/splitters/: recursive_splitter.py
src/vector_store/: vector_db.py
src/vectorstore/: index.faiss  index.pkl
